@@ -130,20 +130,16 @@
  <td>
   <h2 align="center">Sponsors</h2>
   <center>
-    <a href="http://www.borland.com"><img src="logos/borland.gif" alt="Borland" border="0" hspace="8" vspace="5" align="middle"></a>
     <a href="http://www.compaq.com"><img src="logos/compaq.gif" alt="Compaq" border="0" hspace="8" vspace="5" align="middle"></a>
     <a href="http://www.debian.org"><img src="logos/debian.gif" alt="Debian" border="0" hspace="8" vspace="5" align="middle"></a>
     <a href="http://www.fsf.org"><img src="logos/fsf.gif" alt="Free Software Foundation" border="0" hspace="8" vspace="5" align="middle"></a>
-    <a href="http://www.gnumatic.com"><img src="logos/gnumatic.gif" alt="Gnumatic" border="0" hspace="8" vspace="5" align="middle"></a>
     <a href="http://www.hp.com"><img src="logos/hp.gif" alt="Hewlett Packard" border="0" hspace="8" vspace="5" align="middle"></a>
      <a href="http://www.ibm.com"><img src="logos/ibm.gif" alt="IBM" border="0" hspace="8" vspace="5" align="middle"></a>
     <a href="http://www.mandrakesoft.com"><img src="logos/mandrakesoft.gif" alt="MandrakeSoft" border="0" hspace="8" vspace="5" align="middle"></a>
-    <a href="http://www.omg.com"><img src="logos/omg.gif" alt="OMG" border="0" hspace="8" vspace="5" align="middle"></a>
     <a href="http://www.redflag-linux.com"><img src="logos/redflag.gif" alt="Redflag Software Co., Ltd." border="0" hspace="8" vspace="5" align="middle"></a>
     <a href="http://www.redhat.com"><img src="logos/redhat.gif" alt="Red Hat" border="0" hspace="8" vspace="5" align="middle"></a>
     <a href="http://www.sun.com"><img src="logos/sun.gif" alt="Sun Microsystems" border="0" hspace="8" vspace="5" align="middle"></a>
-    <a href="http://www.turbolinux.com"><img src="logos/turbolinux.gif" alt="Turbolinux" border="0" hspace="8" vspace="5" align="middle"></a>
-    <a href="http://www.valinux.com"><img src="logos/valinux.gif" alt="VA Linux" border="0" hspace="8" vspace="5" align="middle"></a>
+    <a href="http://www.osdn.com"><img src="logos/osdn.gif" alt="OSDN" border="0" hspace="8" vspace="5" align="middle"></a>
     <a href="http://www.ximian.com"><img src="logos/ximian.jpg" alt="Ximian Inc."  border="0" hspace="8" vspace="5" align="middle"></a>
   </center>
  </td>
